automatically backed up by learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -2,6 +2,7 @@
 <html>
 <h1>Create a Team and Heroes!</h1>
 <form action="/teams" method="POST">
+  <p>Team Name: <input type="text" name="team[name]"
 
 </form>
 
