--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -2,7 +2,8 @@
 <html>
 <h1>Create a Team and Heroes!</h1>
 <form action="/teams" method="POST">
-  <p>Team Name: <input type="text" name="team[name]"
+  <p>Team Name: <input type="text" name="team[name]"></p>
+  <p>Team Motto: <input type="text" name="team[motto]"></p>
 
 </form>
 
