--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -4,7 +4,7 @@
 <form action="/teams" method="POST">
   <p>Team Name: <input type="text" name="team[name]"></p>
   <p>Team Motto: <input type="text" name="team[motto]"></p>
-  <h2>
+  <h2>Hero 1
 
 </form>
 
