--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -5,7 +5,7 @@
   <p>Team Name: <input type="text" name="team[name]"></p>
   <p>Team Motto: <input type="text" name="team[motto]"></p>
   <h2>Hero 1</h2>
-  <p>Hero Name: <input type="text" name="hero[name]"
+  <p>Hero Name: <input type="text" name="team[hero][name]"
 
 </form>
 
