--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -5,7 +5,7 @@
   <p>Team Name: <input type="text" name="team[name]"></p>
   <p>Team Motto: <input type="text" name="team[motto]"></p>
   <h2>Hero 1</h2>
-  <p>Hero Name: <input type="text" name="team[heroes][][name]"
+  <p>Hero Name: <input id="hero_name_1" type="text" name="team[heroes][][name]">
 
 </form>
 
