--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -6,6 +6,8 @@
   <p>Team Motto: <input type="text" name="team[motto]"></p>
   <h2>Hero 1</h2>
   <p>Hero Name: <input id="hero_name_1" type="text" name="team[heroes][][name]">
+  <p>Hero Power: <input id="hero_power_1" type="text" name="team[heroes][][power]">
+  <p>Hero Bio: <input id="hero_bio_1" type="text" name="team[heroes][][biography]">
 
 </form>
 
