--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -7,7 +7,7 @@
   <h2>Hero 1</h2>
   <p>Hero Name: <input id="hero_name_1" type="text" name="team[heroes][][name]">
   <p>Hero Power: <input id="hero_power_1" type="text" name="team[heroes][][power]">
-  <p>Hero Bio: <input id="hero_bio_1" type="text" name="team[heroes][][biography]">
+  <p>Hero Bio: <input id="hero_bio_1" type="text" name="team[heroes][][bio]">
 
 </form>
 
