--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -8,7 +8,14 @@
   <p>Hero Name: <input id="hero_name_1" type="text" name="team[heroes][][name]">
   <p>Hero Power: <input id="hero_power_1" type="text" name="team[heroes][][power]">
   <p>Hero Bio: <input id="hero_bio_1" type="text" name="team[heroes][][bio]">
-
+  <h2>Hero 2</h2>
+  <p>Hero Name: <input id="hero_name_2" type="text" name="team[heroes][][name]">
+  <p>Hero Power: <input id="hero_power_2" type="text" name="team[heroes][][power]">
+  <p>Hero Bio: <input id="hero_bio_2" type="text" name="team[heroes][][bio]">
+  <h2>Hero 3</h2>
+  <p>Hero Name: <input id="hero_name_3" type="text" name="team[heroes][][name]">
+  <p>Hero Power: <input id="hero_power_3" type="text" name="team[heroes][][power]">
+  <p>Hero Bio: <input id="hero_bio_3" type="text" name="team[heroes][][bio]">
 </form>
 
 </html>
