automatically backed up by learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -16,6 +16,7 @@
   <p>Hero Name: <input id="hero_name_3" type="text" name="team[heroes][][name]">
   <p>Hero Power: <input id="hero_power_3" type="text" name="team[heroes][][power]">
   <p>Hero Bio: <input id="hero_bio_3" type="text" name="team[heroes][][bio]">
+  <input type="submit" id="Submit">
 </form>
 
 </html>
