automatically backed up by learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,6 +1,6 @@
 <h1><%= @team.name %></h1>
 
-<h2>Team Motto: <%= @pirate.name %></h2>
+<h2><%= @team.motto %></h2>
 <p>Pirate Height: <%= @pirate.height %></p>
 <p>Pirate Weight: <%= @pirate.weight %></p>
 
