automatically backed up by learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,11 +1,8 @@
 <h1><%= @team.name %></h1>
 
 <h2><%= @team.motto %></h2>
-<p>Pirate Height: <%= @pirate.height %></p>
-<p>Pirate Weight: <%= @pirate.weight %></p>
 
-
-<h2>FIRST SHIP</h2>
+<h2>Hero Name: <%= @superheroes[0].name %></h2>
 
 <p>Ship 1 Name: <%= @ships[0].name %></p>
 <p>Ship 1 Type: <%= @ships[0].type %></p>
