automatically backed up by learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -4,7 +4,7 @@
 
 <h2>Hero Name: <%= @superheroes[0].name %></h2>
 
-<p>Ship 1 Name: <%= @ships[0].name %></p>
+<p>Hero Power: <%= @ships[0].name %></p>
 <p>Ship 1 Type: <%= @ships[0].type %></p>
 <p>Ship 1 Booty: <%= @ships[0].booty %></p>
 
