--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -5,7 +5,7 @@
 <h2>Hero Name: <%= @superheroes[0].name %></h2>
 
 <p>Hero Power: <%= @ships[0].name %></p>
-<p>Ship 1 Type: <%= @ships[0].type %></p>
+<p>Hero Biography: <%= @ships[0].type %></p>
 <p>Ship 1 Booty: <%= @ships[0].booty %></p>
 
 <h2>SECOND SHIP</h2>
