--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -4,9 +4,8 @@
 
 <h2>Hero Name: <%= @superheroes[0].name %></h2>
 
-<p>Hero Power: <%= @ships[0].name %></p>
-<p>Hero Biography: <%= @ships[0].type %></p>
-<p>Ship 1 Booty: <%= @ships[0].booty %></p>
+<p>Hero Power: <%= @superheroes[0].power %></p>
+<p>Hero Biography: <%= @superheroes[0].name %></p>
 
 <h2>SECOND SHIP</h2>
 
