automatically backed up by learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -5,7 +5,7 @@
 <h2>Hero Name: <%= @superheroes[0].name %></h2>
 
 <p>Hero Power: <%= @superheroes[0].power %></p>
-<p>Hero Biography: <%= @superheroes[0].name %></p>
+<p>Hero Biography: <%= @superheroes[0].bio %></p>
 
 <h2>SECOND SHIP</h2>
 
