--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -7,8 +7,12 @@
 <p>Hero Power: <%= @superheroes[0].power %></p>
 <p>Hero Biography: <%= @superheroes[0].bio %></p>
 
-<h2>SECOND SHIP</h2>
+<h2>Hero Name: <%= @superheroes[0].name %></h2>
 
-<p>Ship 2 Name: <%= @ships[1].name %></p>
-<p>Ship 2 Type: <%= @ships[1].type %></p>
-<p>Ship 2 Booty: <%= @ships[1].booty %></p>
+<p>Hero Power: <%= @superheroes[0].power %></p>
+<p>Hero Biography: <%= @superheroes[0].bio %></p>
+
+<h2>Hero Name: <%= @superheroes[0].name %></h2>
+
+<p>Hero Power: <%= @superheroes[0].power %></p>
+<p>Hero Biography: <%= @superheroes[0].bio %></p>
