--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -5,9 +5,9 @@
   <p>Team Name: <input type="text" name="team[name]"></p>
   <p>Team Motto: <input type="text" name="team[motto]"></p>
   <h2>Hero 1</h2>
-  <p>Hero Name: <input id="hero_name_1" type="text" name="team[heroes][][name]">
-  <p>Hero Power: <input id="hero_power_1" type="text" name="team[heroes][][power]">
-  <p>Hero Bio: <input id="hero_bio_1" type="text" name="team[heroes][][bio]">
+  <p>Hero Name: <input id="member1_name" type="text" name="team[heroes][][name]">
+  <p>Hero Power: <input id="member1_power" type="text" name="team[heroes][][power]">
+  <p>Hero Bio: <input id="member1_bio" type="text" name="team[heroes][][bio]">
   <h2>Hero 2</h2>
   <p>Hero Name: <input id="hero_name_2" type="text" name="team[heroes][][name]">
   <p>Hero Power: <input id="hero_power_2" type="text" name="team[heroes][][power]">
