automatically backed up by learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -9,13 +9,13 @@
   <p>Hero Power: <input id="member1_power" type="text" name="team[heroes][][power]">
   <p>Hero Bio: <input id="member1_bio" type="text" name="team[heroes][][bio]">
   <h2>Hero 2</h2>
-  <p>Hero Name: <input id="hero_name_2" type="text" name="team[heroes][][name]">
-  <p>Hero Power: <input id="hero_power_2" type="text" name="team[heroes][][power]">
-  <p>Hero Bio: <input id="hero_bio_2" type="text" name="team[heroes][][bio]">
+  <p>Hero Name: <input id="member2_name" type="text" name="team[heroes][][name]">
+  <p>Hero Power: <input id="member2_power" type="text" name="team[heroes][][power]">
+  <p>Hero Bio: <input id="member2_bio" type="text" name="team[heroes][][bio]">
   <h2>Hero 3</h2>
-  <p>Hero Name: <input id="hero_name_3" type="text" name="team[heroes][][name]">
-  <p>Hero Power: <input id="hero_power_3" type="text" name="team[heroes][][power]">
-  <p>Hero Bio: <input id="hero_bio_3" type="text" name="team[heroes][][bio]">
+  <p>Hero Name: <input id="member3_name" type="text" name="team[heroes][][name]">
+  <p>Hero Power: <input id="member3_power" type="text" name="team[heroes][][power]">
+  <p>Hero Bio: <input id="member3_bio" type="text" name="team[heroes][][bio]">
   <input type="submit" id="Submit">
 </form>
 
