automatically backed up by learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -16,7 +16,7 @@
   <p>Hero Name: <input id="member3_name" type="text" name="team[heroes][][name]">
   <p>Hero Power: <input id="member3_power" type="text" name="team[heroes][][power]">
   <p>Hero Bio: <input id="member3_bio" type="text" name="team[heroes][][bio]">
-  <input type="submit" id="Submit">
+  <input type="submit" id="submit">
 </form>
 
 </html>
