--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,18 @@
+<h1><%= @team.name %></h1>
 
+<h2>Team Motto: <%= @team.motto %></h2>
 
+<h2>Hero Name: <%= @superheroes[0].name %></h2>
 
+<p>Hero Power: <%= @superheroes[0].power %></p>
+<p>Hero Biography: <%= @superheroes[0].bio %></p>
+
+<h2>Hero Name: <%= @superheroes[1].name %></h2>
+
+<p>Hero Power: <%= @superheroes[1].power %></p>
+<p>Hero Biography: <%= @superheroes[1].bio %></p>
+
+<h2>Hero Name: <%= @superheroes[2].name %></h2>
+
+<p>Hero Power: <%= @superheroes[2].power %></p>
+<p>Hero Biography: <%= @superheroes[2].bio %></p>
