--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html>
+<h1>Create a Team and Heroes!</h1>
+<form action="/teams" method="POST">
+  <p>Team Name: <input type="text" name="team[name]"></p>
+  <p>Team Motto: <input type="text" name="team[motto]"></p>
+  <h2>Hero 1</h2>
+  <p>Hero Name: <input id="member1_name" type="text" name="team[heroes][][name]">
+  <p>Hero Power: <input id="member1_power" type="text" name="team[heroes][][power]">
+  <p>Hero Bio: <input id="member1_bio" type="text" name="team[heroes][][bio]">
+  <h2>Hero 2</h2>
+  <p>Hero Name: <input id="member2_name" type="text" name="team[heroes][][name]">
+  <p>Hero Power: <input id="member2_power" type="text" name="team[heroes][][power]">
+  <p>Hero Bio: <input id="member2_bio" type="text" name="team[heroes][][bio]">
+  <h2>Hero 3</h2>
+  <p>Hero Name: <input id="member3_name" type="text" name="team[heroes][][name]">
+  <p>Hero Power: <input id="member3_power" type="text" name="team[heroes][][power]">
+  <p>Hero Bio: <input id="member3_bio" type="text" name="team[heroes][][bio]">
+  <input type="submit" id="submit">
+</form>
 
+</html>
